26/08/07 Julien Dutheil
* Class SubstitutionMapping is now Clonable.
	
24/08/07 Bastien Bousseau & Julien Dutheil
* New class SubstitutionModelSet (early draft)

17/01/07 Julien Dutheil
* Bug fixed in PseudoNewtonOptimizer! (included in version 1.4.0).

06/07/07 -*- Version 1.4.0. -*-

27/06/07 Nicolas Galtier & Julien Dutheil
* No more memory leak when optimizing tree topology using NNI and PhyML algorithm.
* NNI Topology optimization method (OptimizationTools) improved and duplicated
  (optimizeTreeTopology1 & 2).
* Optimization with a molecular clock do not perform a Powell optimization as
  a last step.

12/05/07 Julien Dutheil
* DistanceMtrix class is now in library seqlib.

05/05/07 Julien Dutheil
* Add support for multi-trees I/O.

02/06/07 Julien Dutheil
* Node/Branch properties are passed as references.
* Bootstrap values computation in TreeTools.
* New constructor in PGMA to chose between U/W PGMA.
* New MRP super-tree function.

29/05/07 Julien Dutheil
* Optimization improved, with new options.

07/05/07 Julien Dutheil
* New method 'buildDistanceTree' in OptimizationTools, with iterative
  estimation procedure of Ninio et al 2007.

13/04/07 Julien Dutheil
* New parametrization in ClockTreeLikelihood.
* Optimizers improved.
* TreeLikelihood interface a little bit modified for compatibility with NumCalc.

07/04/07 Benoît Nabholz and Julien Dutheil
* New ClockTreeLikelihood class.
* New NNIHomogeneousTreeLikelihood class, splitted appart from DRHomogeneousTreeLikelihood.
* DRHomogeneousTreeLikelihood a little bit improved (derivatives computation).
* New method initialize() in TreeLikelihood classes.

03/04/07 Julien Dutheil
* VIRTUAL_COV variable changed to NO_VIRTUAL_COV. configure.ac file updated.
  => Default behaviour is now /really/ to use covariant return type with
	virtual inheritence, even when importing the files in an IDE. To use the old
	compilers behaviour, one must set the NO_VIRTUAL_COV preproc variable.