@@ -1,3 +1,5 @@
-Julien Dutheil <Julien.Dutheil@univ-montp2.fr>
+Julien Dutheil <jdutheil@daimi.edu.dk>
 Vincent Ranwez <ranwez@isem.univ-montp2.fr>
 Nicolas Galtier <galtier@univ-montp2.fr>
+Bastien Boussau <bboussau@biomserv.univ-lyon1.fr>
+
